---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"▌/mo                                                        "
"▌                                                           "
"▌/model  选择使用的模型和推理强度                           " Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " ")]
"▌/mention  引用一个文件                                     " Hidden by multi-width symbols: [(12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
